_build/default/lib/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On VAR shift to state 1
-- On var_decl shift to state 9
-- On program shift to state 11
-- On list(var_decl) shift to state 12
## Reductions:
-- On MAIN CLASS
--   reduce production list(var_decl) ->

State 1:
## Known stack suffix:
## VAR
## LR(1) items:
var_decl -> VAR . typ IDENT SEMI [ WHILE VAR TRUE THIS RETURN PRINT NUM NOT NEW MINUS MAIN LPAR IF IDENT FALSE END CLASS ]
## Transitions:
-- On VOID shift to state 2
-- On INT shift to state 3
-- On IDENT shift to state 4
-- On BOOL shift to state 5
-- On typ shift to state 6
## Reductions:

State 2:
## Known stack suffix:
## VOID
## LR(1) items:
typ -> VOID . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> VOID

State 3:
## Known stack suffix:
## INT
## LR(1) items:
typ -> INT . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> INT

State 4:
## Known stack suffix:
## IDENT
## LR(1) items:
typ -> IDENT . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> IDENT

State 5:
## Known stack suffix:
## BOOL
## LR(1) items:
typ -> BOOL . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> BOOL

State 6:
## Known stack suffix:
## VAR typ
## LR(1) items:
var_decl -> VAR typ . IDENT SEMI [ WHILE VAR TRUE THIS RETURN PRINT NUM NOT NEW MINUS MAIN LPAR IF IDENT FALSE END CLASS ]
## Transitions:
-- On IDENT shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## VAR typ IDENT
## LR(1) items:
var_decl -> VAR typ IDENT . SEMI [ WHILE VAR TRUE THIS RETURN PRINT NUM NOT NEW MINUS MAIN LPAR IF IDENT FALSE END CLASS ]
## Transitions:
-- On SEMI shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## VAR typ IDENT SEMI
## LR(1) items:
var_decl -> VAR typ IDENT SEMI . [ WHILE VAR TRUE THIS RETURN PRINT NUM NOT NEW MINUS MAIN LPAR IF IDENT FALSE END CLASS ]
## Transitions:
## Reductions:
-- On WHILE VAR TRUE THIS RETURN PRINT NUM NOT NEW MINUS MAIN LPAR IF IDENT FALSE END CLASS
--   reduce production var_decl -> VAR typ IDENT SEMI

State 9:
## Known stack suffix:
## var_decl
## LR(1) items:
list(var_decl) -> var_decl . list(var_decl) [ WHILE TRUE THIS RETURN PRINT NUM NOT NEW MINUS MAIN LPAR IF IDENT FALSE END CLASS ]
## Transitions:
-- On VAR shift to state 1
-- On var_decl shift to state 9
-- On list(var_decl) shift to state 10
## Reductions:
-- On WHILE TRUE THIS RETURN PRINT NUM NOT NEW MINUS MAIN LPAR IF IDENT FALSE END CLASS
--   reduce production list(var_decl) ->

State 10:
## Known stack suffix:
## var_decl list(var_decl)
## LR(1) items:
list(var_decl) -> var_decl list(var_decl) . [ WHILE TRUE THIS RETURN PRINT NUM NOT NEW MINUS MAIN LPAR IF IDENT FALSE END CLASS ]
## Transitions:
## Reductions:
-- On WHILE TRUE THIS RETURN PRINT NUM NOT NEW MINUS MAIN LPAR IF IDENT FALSE END CLASS
--   reduce production list(var_decl) -> var_decl list(var_decl)

State 11:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 12:
## Known stack suffix:
## list(var_decl)
## LR(1) items:
program -> list(var_decl) . list(class_def) MAIN BEGIN list(instr) END EOF [ # ]
## Transitions:
-- On CLASS shift to state 13
-- On list(class_def) shift to state 139
-- On class_def shift to state 145
## Reductions:
-- On MAIN
--   reduce production list(class_def) ->

State 13:
## Known stack suffix:
## CLASS
## LR(1) items:
class_def -> CLASS . IDENT BEGIN list(attr_decl) list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On IDENT shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## CLASS IDENT
## LR(1) items:
class_def -> CLASS IDENT . BEGIN list(attr_decl) list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On BEGIN shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## CLASS IDENT BEGIN
## LR(1) items:
class_def -> CLASS IDENT BEGIN . list(attr_decl) list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On ATTR shift to state 16
-- On list(attr_decl) shift to state 20
-- On attr_decl shift to state 137
## Reductions:
-- On METHOD END
--   reduce production list(attr_decl) ->

State 16:
## Known stack suffix:
## ATTR
## LR(1) items:
attr_decl -> ATTR . typ IDENT SEMI [ METHOD END ATTR ]
## Transitions:
-- On VOID shift to state 2
-- On INT shift to state 3
-- On IDENT shift to state 4
-- On BOOL shift to state 5
-- On typ shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## ATTR typ
## LR(1) items:
attr_decl -> ATTR typ . IDENT SEMI [ METHOD END ATTR ]
## Transitions:
-- On IDENT shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## ATTR typ IDENT
## LR(1) items:
attr_decl -> ATTR typ IDENT . SEMI [ METHOD END ATTR ]
## Transitions:
-- On SEMI shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## ATTR typ IDENT SEMI
## LR(1) items:
attr_decl -> ATTR typ IDENT SEMI . [ METHOD END ATTR ]
## Transitions:
## Reductions:
-- On METHOD END ATTR
--   reduce production attr_decl -> ATTR typ IDENT SEMI

State 20:
## Known stack suffix:
## CLASS IDENT BEGIN list(attr_decl)
## LR(1) items:
class_def -> CLASS IDENT BEGIN list(attr_decl) . list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On METHOD shift to state 21
-- On method_def shift to state 133
-- On list(method_def) shift to state 135
## Reductions:
-- On END
--   reduce production list(method_def) ->

State 21:
## Known stack suffix:
## METHOD
## LR(1) items:
method_def -> METHOD . typ IDENT LPAR param_def RPAR BEGIN list(var_decl) list(instr) END [ METHOD END ]
method_def -> METHOD . typ IDENT LPAR RPAR BEGIN list(var_decl) list(instr) END [ METHOD END ]
## Transitions:
-- On VOID shift to state 2
-- On INT shift to state 3
-- On IDENT shift to state 4
-- On BOOL shift to state 5
-- On typ shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## METHOD typ
## LR(1) items:
method_def -> METHOD typ . IDENT LPAR param_def RPAR BEGIN list(var_decl) list(instr) END [ METHOD END ]
method_def -> METHOD typ . IDENT LPAR RPAR BEGIN list(var_decl) list(instr) END [ METHOD END ]
## Transitions:
-- On IDENT shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## METHOD typ IDENT
## LR(1) items:
method_def -> METHOD typ IDENT . LPAR param_def RPAR BEGIN list(var_decl) list(instr) END [ METHOD END ]
method_def -> METHOD typ IDENT . LPAR RPAR BEGIN list(var_decl) list(instr) END [ METHOD END ]
## Transitions:
-- On LPAR shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## METHOD typ IDENT LPAR
## LR(1) items:
method_def -> METHOD typ IDENT LPAR . param_def RPAR BEGIN list(var_decl) list(instr) END [ METHOD END ]
method_def -> METHOD typ IDENT LPAR . RPAR BEGIN list(var_decl) list(instr) END [ METHOD END ]
## Transitions:
-- On VOID shift to state 2
-- On RPAR shift to state 25
-- On INT shift to state 3
-- On IDENT shift to state 4
-- On BOOL shift to state 5
-- On typ shift to state 123
-- On param_def shift to state 127
## Reductions:

State 25:
## Known stack suffix:
## METHOD typ IDENT LPAR RPAR
## LR(1) items:
method_def -> METHOD typ IDENT LPAR RPAR . BEGIN list(var_decl) list(instr) END [ METHOD END ]
## Transitions:
-- On BEGIN shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## METHOD typ IDENT LPAR RPAR BEGIN
## LR(1) items:
method_def -> METHOD typ IDENT LPAR RPAR BEGIN . list(var_decl) list(instr) END [ METHOD END ]
## Transitions:
-- On VAR shift to state 1
-- On var_decl shift to state 9
-- On list(var_decl) shift to state 27
## Reductions:
-- On WHILE TRUE THIS RETURN PRINT NUM NOT NEW MINUS LPAR IF IDENT FALSE END
--   reduce production list(var_decl) ->

State 27:
## Known stack suffix:
## METHOD typ IDENT LPAR RPAR BEGIN list(var_decl)
## LR(1) items:
method_def -> METHOD typ IDENT LPAR RPAR BEGIN list(var_decl) . list(instr) END [ METHOD END ]
## Transitions:
-- On WHILE shift to state 28
-- On TRUE shift to state 30
-- On THIS shift to state 81
-- On RETURN shift to state 87
-- On PRINT shift to state 90
-- On NUM shift to state 32
-- On NOT shift to state 33
-- On NEW shift to state 34
-- On MINUS shift to state 37
-- On LPAR shift to state 38
-- On IF shift to state 95
-- On IDENT shift to state 100
-- On FALSE shift to state 44
-- On list(instr) shift to state 121
-- On instr shift to state 115
-- On expr shift to state 117
## Reductions:
-- On END
--   reduce production list(instr) ->

State 28:
## Known stack suffix:
## WHILE
## LR(1) items:
instr -> WHILE . LPAR expr RPAR BEGIN list(instr) END [ WHILE TRUE THIS RETURN PRINT NUM NOT NEW MINUS LPAR IF IDENT FALSE END ]
## Transitions:
-- On LPAR shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## WHILE LPAR
## LR(1) items:
instr -> WHILE LPAR . expr RPAR BEGIN list(instr) END [ WHILE TRUE THIS RETURN PRINT NUM NOT NEW MINUS LPAR IF IDENT FALSE END ]
## Transitions:
-- On TRUE shift to state 30
-- On THIS shift to state 31
-- On NUM shift to state 32
-- On NOT shift to state 33
-- On NEW shift to state 34
-- On MINUS shift to state 37
-- On LPAR shift to state 38
-- On IDENT shift to state 39
-- On FALSE shift to state 44
-- On expr shift to state 78
## Reductions:

State 30:
## Known stack suffix:
## TRUE
## LR(1) items:
expr -> TRUE . [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND
--   reduce production expr -> TRUE

State 31:
## Known stack suffix:
## THIS
## LR(1) items:
expr -> THIS . [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND
--   reduce production expr -> THIS

State 32:
## Known stack suffix:
## NUM
## LR(1) items:
expr -> NUM . [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND
--   reduce production expr -> NUM

State 33:
## Known stack suffix:
## NOT
## LR(1) items:
expr -> NOT . expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On TRUE shift to state 30
-- On THIS shift to state 31
-- On NUM shift to state 32
-- On NOT shift to state 33
-- On NEW shift to state 34
-- On MINUS shift to state 37
-- On LPAR shift to state 38
-- On IDENT shift to state 39
-- On FALSE shift to state 44
-- On expr shift to state 77
## Reductions:

State 34:
## Known stack suffix:
## NEW
## LR(1) items:
expr -> NEW . IDENT args [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On IDENT shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## NEW IDENT
## LR(1) items:
expr -> NEW IDENT . args [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On LPAR shift to state 36
-- On args shift to state 76
## Reductions:

State 36:
## Known stack suffix:
## LPAR
## LR(1) items:
args -> LPAR . loption(separated_nonempty_list(COMMA,expr)) RPAR [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On TRUE shift to state 30
-- On THIS shift to state 31
-- On NUM shift to state 32
-- On NOT shift to state 33
-- On NEW shift to state 34
-- On MINUS shift to state 37
-- On LPAR shift to state 38
-- On IDENT shift to state 39
-- On FALSE shift to state 44
-- On separated_nonempty_list(COMMA,expr) shift to state 70
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 71
-- On expr shift to state 73
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,expr)) ->

State 37:
## Known stack suffix:
## MINUS
## LR(1) items:
expr -> MINUS . expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On TRUE shift to state 30
-- On THIS shift to state 31
-- On NUM shift to state 32
-- On NOT shift to state 33
-- On NEW shift to state 34
-- On MINUS shift to state 37
-- On LPAR shift to state 38
-- On IDENT shift to state 39
-- On FALSE shift to state 44
-- On expr shift to state 69
## Reductions:

State 38:
## Known stack suffix:
## LPAR
## LR(1) items:
expr -> LPAR . expr RPAR [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On TRUE shift to state 30
-- On THIS shift to state 31
-- On NUM shift to state 32
-- On NOT shift to state 33
-- On NEW shift to state 34
-- On MINUS shift to state 37
-- On LPAR shift to state 38
-- On IDENT shift to state 39
-- On FALSE shift to state 44
-- On expr shift to state 45
## Reductions:

State 39:
## Known stack suffix:
## IDENT
## LR(1) items:
expr -> IDENT . [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> IDENT . DOT IDENT option(args) [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On DOT shift to state 40
## Reductions:
-- On TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND
--   reduce production expr -> IDENT

State 40:
## Known stack suffix:
## IDENT DOT
## LR(1) items:
expr -> IDENT DOT . IDENT option(args) [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On IDENT shift to state 41
## Reductions:

State 41:
## Known stack suffix:
## IDENT DOT IDENT
## LR(1) items:
expr -> IDENT DOT IDENT . option(args) [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On LPAR shift to state 36
-- On option(args) shift to state 42
-- On args shift to state 43
## Reductions:
-- On TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND
--   reduce production option(args) ->

State 42:
## Known stack suffix:
## IDENT DOT IDENT option(args)
## LR(1) items:
expr -> IDENT DOT IDENT option(args) . [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND
--   reduce production expr -> IDENT DOT IDENT option(args)

State 43:
## Known stack suffix:
## args
## LR(1) items:
option(args) -> args . [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND
--   reduce production option(args) -> args

State 44:
## Known stack suffix:
## FALSE
## LR(1) items:
expr -> FALSE . [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND
--   reduce production expr -> FALSE

State 45:
## Known stack suffix:
## LPAR expr
## LR(1) items:
expr -> LPAR expr . RPAR [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . PLUS expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . TIMES expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . DIVIDES expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . MODULO expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . MINUS expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . EQUALS expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . NEQUALS expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . LESS expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . LESS_EQUALS expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . AND expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
expr -> expr . OR expr [ TIMES RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES AND ]
## Transitions:
-- On TIMES shift to state 46
-- On RPAR shift to state 48
-- On PLUS shift to state 49
-- On OR shift to state 53
-- On NEQUALS shift to state 59
-- On MODULO shift to state 55
-- On MINUS shift to state 57
-- On LESS_EQUALS shift to state 63
-- On LESS shift to state 65
-- On EQUALS shift to state 67
-- On DIVIDES shift to state 51
-- On AND shift to state 61
## Reductions:

State 46:
## Known stack suffix:
## expr TIMES
## LR(1) items:
expr -> expr TIMES . expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
-- On TRUE shift to state 30
-- On THIS shift to state 31
-- On NUM shift to state 32
-- On NOT shift to state 33
-- On NEW shift to state 34
-- On MINUS shift to state 37
-- On LPAR shift to state 38
-- On IDENT shift to state 39
-- On FALSE shift to state 44
-- On expr shift to state 47
## Reductions:

State 47:
## Known stack suffix:
## expr TIMES expr
## LR(1) items:
expr -> expr . PLUS expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . TIMES expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr TIMES expr . [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . DIVIDES expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . MODULO expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . MINUS expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . EQUALS expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . NEQUALS expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . LESS expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . LESS_EQUALS expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . AND expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
expr -> expr . OR expr [ TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMI RPAR PLUS OR NEQUALS MODULO MINUS LESS_EQUALS LESS EQUALS DIVIDES COMMA AND
--   reduce production expr -> expr TIMES expr
